fixed bug with accordion stretching

--- a/ngRollTheDice/src/app/components/display/display.component.css
+++ b/ngRollTheDice/src/app/components/display/display.component.css
@@ -17,6 +17,6 @@ a {
 }
 .accordion {
   position:  fixed;
-  width: 28.5%;
+  width: 21%;
 }
 
